# learning-notes

./: .gitignore  README.md
books/c++_templates_2017/c_templates/: c_templates.sln
books/computer_vision_opencv_qt/: cvplugininterface.h  opencv.pri
books/computer_vision_opencv_qt/Hello_Qt_OpenCV/: Hello_Qt_OpenCV.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
books/computer_vision_opencv_qt/MultithreadedCV/: MultithreadedCV.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  videoprocessor.cpp  videoprocessor.h  videoprocessorthread.cpp  videoprocessorthread.h
books/computer_vision_opencv_qt/Plugin_User/: Plugin_User.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
books/computer_vision_opencv_qt/median_filter_plugin/: median_filter_plugin.cpp  median_filter_plugin.h  median_filter_plugin.pro
books/deeplearning_with_python_manning/: 2. mnist.ipynb  3.1 movie reviews - binary classification .ipynb  3.2 Classifying newswires multi classification example.ipynb  3.3 Predicting house prices.ipynb  5.1 introduction to convnets.ipynb  5.2 convnets for dog vs cat.ipynb  8.1 Generative Adversarial networks.ipynb
books/django_by_example/: requirements.txt
books/functional_programming_in_cpp/: functional_programming.sln
books/learning_opencv_3/: OpenCV_3.props
books/learning_opencv_3/opencv_examples/: opencv_examples.sln
books/mastering_qt_5/: README.md
concepts/generative_adversarial_network/: gan.md
courses/fastai/: 1. Matrix math, Accuracy, Memory, Speed & Parallelization.ipynb
libs/ceres/: ceres.props  glog.props
libs/cmake/learn_cmake/: CMakeLists.txt
libs/cmake/learn_cmake/src/01_hello_world/: CMakeLists.txt  main.cpp
libs/cmake/learn_cmake/src/02_hello_opencv/: CMakeLists.txt
libs/cmake/learn_cmake/src/03_qt_console/: CMakeLists.txt
libs/eigen/: eigen.props
libs/flatbuffers/: flatbuffers.props
libs/keras/: pixelwise_softmax.ipynb
libs/librealsense/: OpenCV_3.props  PCL_1.8.1.props
libs/nanogui/: nanogui.props
libs/opencv/: OpenCV_3.props
libs/opengl/: common.props  glew32.props  glfw.props  glm.props
libs/pcl/: PCL_1.8.1.props
libs/pyopengl/: 00_glfw_window.py  01_basic_shaders.py  02_coloring_each_vertex.py  02_multiple_cubes.py  03_creating_a_quad_with_element_buffer_object.py  04_creating_a_3d_cube.py  requirements.txt
libs/pytorch/: .gitignore
libs/pyzmq/: README.md  consumer.py  producer.py
libs/qrcode/: qrcode.ipynb
libs/qt5/: .gitignore
libs/qt5/02_use_pcl/: CMakeLists.txt
libs/qt5/test_cmake/: CMakeLists.txt
libs/sklearn/: test_binary.py
libs/tensorflow/: 1. tensorflow layers.ipynb  2. MNIST.ipynb  3. CIFAR-10.ipynb  4. Driving.ipynb
(+260 files in other folders)
